test-utils/proc-macros/tests/compile-fail/empty_args.rs
#![allow(unused_imports)]

use test_utils::upstream;

#[upstream()]
#[test]
fn no_args() {}

fn main() {}
